upgrading select2 to fix a layout bug in firefox

--- a/web/css/select2.css
+++ b/web/css/select2.css
@@ -1,5 +1,5 @@
 /*
-Version: 3.0 Timestamp: Tue Jul 31 21:09:16 PDT 2012
+Version: 3.1 Timestamp: Tue Aug 14 09:05:17 PDT 2012
 */
 .select2-container {
     position: relative;
@@ -7,7 +7,7 @@ Version: 3.0 Timestamp: Tue Jul 31 21:09:16 PDT 2012
     /* inline-block for ie7 */
     zoom: 1;
     *display: inline;
-
+    vertical-align: top;
 }
 
 .select2-container,
@@ -87,7 +87,7 @@ Version: 3.0 Timestamp: Tue Jul 31 21:09:16 PDT 2012
   width: 12px;
   height: 12px;
   font-size: 1px;
-  background: url('/images/select2.png') right top no-repeat;
+  background: url('select2.png') right top no-repeat;
   cursor: pointer;
   text-decoration: none;
   border:0;
@@ -157,7 +157,7 @@ Version: 3.0 Timestamp: Tue Jul 31 21:09:16 PDT 2012
 }
 
 .select2-container .select2-choice div b {
-    background: url('/images/select2.png') no-repeat 0 1px;
+    background: url('select2.png') no-repeat 0 1px;
     display: block;
     width: 100%;
     height: 100%;
@@ -181,13 +181,13 @@ Version: 3.0 Timestamp: Tue Jul 31 21:09:16 PDT 2012
 }
 
 .select2-search input {
-    background: #fff url('/images/select2.png') no-repeat 100% -22px;
-    background: url('/images/select2.png') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
-    background: url('/images/select2.png') no-repeat 100% -22px, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-    background: url('/images/select2.png') no-repeat 100% -22px, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-    background: url('/images/select2.png') no-repeat 100% -22px, -o-linear-gradient(bottom, white 85%, #eeeeee 99%);
-    background: url('/images/select2.png') no-repeat 100% -22px, -ms-linear-gradient(top, #ffffff 85%, #eeeeee 99%);
-    background: url('/images/select2.png') no-repeat 100% -22px, linear-gradient(top, #ffffff 85%, #eeeeee 99%);
+    background: #fff url('select2.png') no-repeat 100% -22px;
+    background: url('select2.png') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
+    background: url('select2.png') no-repeat 100% -22px, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
+    background: url('select2.png') no-repeat 100% -22px, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
+    background: url('select2.png') no-repeat 100% -22px, -o-linear-gradient(bottom, white 85%, #eeeeee 99%);
+    background: url('select2.png') no-repeat 100% -22px, -ms-linear-gradient(top, #ffffff 85%, #eeeeee 99%);
+    background: url('select2.png') no-repeat 100% -22px, linear-gradient(top, #ffffff 85%, #eeeeee 99%);
     padding: 4px 20px 4px 5px;
     outline: 0;
     border: 1px solid #aaa;
@@ -211,13 +211,13 @@ Version: 3.0 Timestamp: Tue Jul 31 21:09:16 PDT 2012
 }
 
 .select2-search input.select2-active {
-    background: #fff url('/images/spinner.gif') no-repeat 100%;
-    background: url('/images/spinner.gif') no-repeat 100%, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
-    background: url('/images/spinner.gif') no-repeat 100%, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-    background: url('/images/spinner.gif') no-repeat 100%, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-    background: url('/images/spinner.gif') no-repeat 100%, -o-linear-gradient(bottom, white 85%, #eeeeee 99%);
-    background: url('/images/spinner.gif') no-repeat 100%, -ms-linear-gradient(top, #ffffff 85%, #eeeeee 99%);
-    background: url('/images/spinner.gif') no-repeat 100%, linear-gradient(top, #ffffff 85%, #eeeeee 99%);
+    background: #fff url('spinner.gif') no-repeat 100%;
+    background: url('spinner.gif') no-repeat 100%, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
+    background: url('spinner.gif') no-repeat 100%, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
+    background: url('spinner.gif') no-repeat 100%, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
+    background: url('spinner.gif') no-repeat 100%, -o-linear-gradient(bottom, white 85%, #eeeeee 99%);
+    background: url('spinner.gif') no-repeat 100%, -ms-linear-gradient(top, #ffffff 85%, #eeeeee 99%);
+    background: url('spinner.gif') no-repeat 100%, linear-gradient(top, #ffffff 85%, #eeeeee 99%);
 }
 
 
@@ -310,11 +310,8 @@ Version: 3.0 Timestamp: Tue Jul 31 21:09:16 PDT 2012
 .select2-results .select2-highlighted em {
   background: transparent;
 }
-.select2-results .select2-no-results {
-  background: #f4f4f4;
-  display: list-item;
-}
-
+.select2-results .select2-no-results,
+.select2-results .select2-searching,
 .select2-results .select2-selection-limit {
   background: #f4f4f4;
   display: list-item;
@@ -339,7 +336,7 @@ disabled look for already selected choices in the results dropdown
 }
 
 .select2-more-results.select2-active {
-    background: #f4f4f4 url('/images/spinner.gif') no-repeat 100%;
+    background: #f4f4f4 url('spinner.gif') no-repeat 100%;
 }
 
 .select2-more-results {
@@ -422,7 +419,7 @@ disabled look for already selected choices in the results dropdown
 }
 
 .select2-container-multi .select2-choices .select2-search-field input.select2-active {
-    background: #fff url('/images/spinner.gif') no-repeat 100% !important;
+    background: #fff url('spinner.gif') no-repeat 100% !important;
 }
 
 .select2-default {
@@ -470,7 +467,7 @@ disabled look for already selected choices in the results dropdown
   width: 12px;
   height: 13px;
   font-size: 1px;
-  background: url('/images/select2.png') right top no-repeat;
+  background: url('select2.png') right top no-repeat;
   outline: none;
 }
 
